--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -34,8 +34,8 @@ body {
 }
 
 #right-gradient {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-image: $color-bg-grey-opacity-right;
   overflow-y: scroll;
 }
