--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -13,11 +13,11 @@ body {
 }
 
 #root {
-  @include flex(column, center, center);
-  min-height: 100vh;
-  margin: 0;
-  min-width: 100vw;
-  overflow-x: hidden;
+  //@include flex(column, center, center);
+  //min-height: 100vh;
+  //margin: 0;
+  //min-width: 100vw;
+  //overflow-x: hidden;
 }
 
 #bg {
@@ -28,16 +28,16 @@ body {
     ),
     url("/home.jpg");
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
-  overflow-y: scroll;
+  //width: 100vw;
+  //height: 100vh;
+  //overflow-y: scroll;
 }
 
 #right-gradient {
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  //height: 100%;
   background-image: $color-bg-grey-opacity-right;
-  overflow-y: scroll;
+  //overflow-y: scroll;
 }
 
 main {
